[package]
name = "netlify-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
once_cell = "1.9.0"
fetchlike = "0.1.2"
